📝 update doc based on review comment

--- a/docs/Modules/ecdsa/ecdsasdk.mdx
+++ b/docs/Modules/ecdsa/ecdsasdk.mdx
@@ -81,5 +81,5 @@ const smartAccount = await BiconomySmartAccountV2.create({
 ```
 
 :::info
-The Smart Account's address is counterfactual, its address can be calculated before deployment. This generated address depends on the default validation module specified during account creation.
+The Smart Account's address is counterfactual, its address can be calculated before deployment. This generated address depends on the default validation module specified during account creation, here ECDSA Module.
 :::
