--- a/docs/Modules/ecdsa/ecdsavalidationmodule.mdx
+++ b/docs/Modules/ecdsa/ecdsavalidationmodule.mdx
@@ -6,7 +6,7 @@ description: "Overview of ECDSA Validation Module's role in Smart Accounts"
 
 ## Introduction 📄
 
-The ECDSA Validation Module or ECDSA Module is integral to Biconomy's Modular Smart Account, enhancing transaction security and user authentication in Ethereum. This document outlines its functionality, benefits, and use cases.
+The **ECDSA Validation Module** or **ECDSA Module** is integral to **Biconomy's Modular Smart Account**, enhancing transaction security and user authentication. This document outlines its functionality, benefits, and use cases.
 
 :::info
 Understanding the ECDSA Validation Module is crucial for developers working with Ethereum-based Smart Accounts.
@@ -16,7 +16,7 @@ Understanding the ECDSA Validation Module is crucial for developers working with
 
 ### What is the ECDSA Validation Module? 🤔
 
-This module allows Externally Owned Accounts (EOAs) to authorize and sign user operations (UserOps) for Biconomy Smart Accounts. It operates similarly to traditional ownership but is reconstructed as a Validation Module within the **Account Abstraction** ecosystem.
+This module allows **Externally Owned Accounts (EOAs)** to authorize and sign user operations (UserOps) for Biconomy Smart Accounts. It operates similarly to traditional ownership but is reconstructed as a **Validation Module** within the **Account Abstraction** ecosystem.
 
 :::tip
 The ECDSA Validation Module serves as the **default module** in Modular Smart Accounts if no other Validation Module is set during deployment. Streamlining user operations and ownership management.
