--- a/docs/quickstart.mdx
+++ b/docs/quickstart.mdx
@@ -54,7 +54,7 @@ All packages you need for this guide are configured and installed for you. Check
 
 </details>
 
-Let’s first set up a `.env` file in the root of our project, this will need a **Private Key** of any **Externally Owned Account (EOA)** you would like to serve as the owner of the Smart Account we create. This is a private key you can get from wallets like MetaMask, TrustWallet, Coinbase Wallet etc. Each of these wallets will include step-by-step guides on how to export the Private key.
+Let’s first set up a `.env` file in the root of our project, this will need a **Private Key** of any **Externally Owned Account (EOA)** you would like to serve as the owner of the Smart Account we create. This is a private key you can get from wallets like MetaMask, TrustWallet, Coinbase Wallet, etc. Each of these wallets will include step-by-step guides on how to export the Private key.
 
 ```bash
 PRIVATE_KEY = "Enter a private key"
