--- a/docs/quickstart.mdx
+++ b/docs/quickstart.mdx
@@ -184,7 +184,7 @@ Let's create your first **user operation (userOp)** for the transaction. Here ar
 - `data`: We are defaulting to `0x` as no specific data is needed for native transfers.
 - `value`: We need to indicate the amount we want to transfer and format it correctly using the `parseEther` utility function.
 
-Then we'll now build the userOp. You can log the partial userOp if you want. We'll add `0x` to the `paymasterAndData` value to make it a regular transaction where the end user pays for the gas.
+Now we'll build the userOp. You can log the partial userOp if you want. We'll add `0x` to the `paymasterAndData` value to make it a regular transaction where the end user pays for the gas.
 
 ```typescript
 async function buildUserOp(smartAccount: BiconomySmartAccountV2) {
