--- a/docs/quickstart.mdx
+++ b/docs/quickstart.mdx
@@ -3,15 +3,15 @@ sidebar_label: "Quickstart"
 sidebar_position: 2
 ---
 
-# Quickstart: Smart Account Native Transfer
+# Quickstart: Smart Account Native Transfer ⚡️
 
 In this guide, we will create a basic Node.js script using **TypeScript** with an implementation of the **Smart Account Package** from the Biconomy SDK. You will learn how to create a **Smart Account** and perform **user operations** by sending a native transfer of tokens.
 
 :::info
-Please note that this tutorial assumes you have Node JS installed on your computer and have some working knowledge of Node.
+Please note that this tutorial assumes you have Node JS installed on your computer and have some working knowledge of Node. 🧠
 :::
 
-## Environment set up
+## Environment set up 🛠️
 
 We will clone a preconfigured Node.js project with TypeScript support to get started. Follow these steps to clone the repository to your local machine using your preferred command line interface:
 
@@ -54,7 +54,7 @@ All packages you need for this guide are configured and installed for you. Check
 
 </details>
 
-Let’s first set up a `.env` file in the root of our project, this will need a **Private Key** of any **Externally Owned Account (EOA)** you would like to serve as the owner of the Smart Account we create. This is a private key you can get from wallets like MetaMask, TrustWallet, Coinbase Wallet, etc. Each of these wallets will include step-by-step guides on how to export the Private key.
+Let’s first set up a `.env` file in the root of our project, this will need a **Private Key** of any **Externally Owned Account (EOA)** you would like to serve as the owner of the Smart Account we create. This is a private key you can get from wallets like MetaMask, TrustWallet, Coinbase Wallet, etc. Each of these wallets will include step-by-step guides on how to export the Private key. 🔑
 
 ```bash
 PRIVATE_KEY = "Enter a private key"
@@ -70,7 +70,7 @@ config();
 
 Now our code is configured to access the environment variable as needed.
 
-## Initialization
+## Initialization 🌟
 
 Start by importing necessary packages for the bundler:
 
@@ -169,12 +169,12 @@ Smart accounts are designed with a pre-determined address known prior to deploym
 :::
 
 :::caution
-Before continuing, now that we have our Smart Account address, we need to fund it with some test network tokens! Since we are using the Polygon Mumbai network head over to the [Polygon Faucet](https://faucet.polygon.technology/) and paste in your smart account address and get some test tokens! If you skip this step, you might run into the [AA21 didn't pay prefund error](/troubleshooting/commonerrors.md)!
+Before continuing, now that we have our Smart Account address, we need to fund it with some test network tokens! Since we are using the Polygon Mumbai network head over to the [Polygon Faucet](https://faucet.polygon.technology/) and paste in your smart account address and get some test tokens! If you skip this step, you might run into the [AA21 didn't pay prefund error](/troubleshooting/commonerrors.md)! 💸
 :::
 
 Once you have tokens available, it is time to start constructing our first userOps for a native transfer.
 
-## Build you first userOp (Transaction)
+## Build you first userOp (Transaction) 🧱
 
 Let's create your first **user operation (userOp)** for the transaction. Here are the details it needs:
 
@@ -204,7 +204,7 @@ async function buildUserOp(smartAccount: BiconomySmartAccountV2) {
 }
 ```
 
-## Execute your first userOp
+## Execute your first userOp 🚀
 
 With our `buildUserOp` function set to create user operations, we'll now use it inside the `submitUserOp` function.
 
@@ -244,7 +244,9 @@ async function submitUserOp() {
 _To wait for a specific number of network confirmations before getting the value, use `wait()` with a number argument.
 For instance, `userOpResponse.wait(5)` waits for 5 confirmations before returning the value._
 
-Check out the long transaction details available now in your console! You just created and executed your first userOps using the Biconomy SDK!
+Check out the long transaction details available now in your console! You just created and executed your first userOps using the Biconomy SDK! 
+
+Well done! The entire Biconomy crew is sending you a big round of applause! 👏👏🏻👏🏼👏🏽👏🏾👏🏿
 
 <details>
   <summary>View Complete Code</summary>
@@ -352,4 +354,5 @@ submitUserOp();
 If you are facing any error, do checkout the [troubleshooting](/troubleshooting/commonerrors) for common errors.
 
 🎉 **Congratulations on completing the quickstart!**
+
 To dive deeper, check out more use cases in our Quick Explore guide or explore our Node.js guides for additional insights.
