--- a/docs/Modules/ecdsa/ecdsasdk.mdx
+++ b/docs/Modules/ecdsa/ecdsasdk.mdx
@@ -81,5 +81,9 @@ const smartAccount = await BiconomySmartAccountV2.create({
 ```
 
 :::info
-The Smart Account's address is counterfactual, its address can be calculated before deployment. This generated address depends on the default validation module specified during account creation, here ECDSA Module.
+The Smart Account's address is counterfactually generated based on the signer's public key, which is the owner's address used in the ECDSA Module. This feature allows for the pre-calculation of the account address before deployment.
+:::
+
+:::warning
+To deploy the same Smart Account (with the same address) on different chains, it's crucial to use the same initialization data (here, the owner's EOA address) for the ECDSA Module. This ensures consistency in the account's address across various blockchains.
 :::
