--- a/docs/Modules/ecdsa/ecdsavalidationmodule.mdx
+++ b/docs/Modules/ecdsa/ecdsavalidationmodule.mdx
@@ -16,27 +16,27 @@ Understanding the ECDSA Validation Module is crucial for developers working with
 
 ### What is the ECDSA Validation Module? 🤔
 
-This module allows **Externally Owned Accounts (EOAs)** to authorize and sign user operations (UserOps) for Biconomy Smart Accounts. It operates similarly to traditional ownership but is reconstructed as a **Validation Module** within the **Account Abstraction** ecosystem.
+This module allows **Externally Owned Accounts (EOAs)** to authorize and sign user operations (UserOps) for Biconomy Smart Accounts. It operates similarly to non-modular Smart Account ownership but is reconstructed as a **Validation Module** within the **Account Abstraction + Modular Smart Accounts** ecosystem.
 
 :::tip
-The ECDSA Validation Module serves as the **default module** in Modular Smart Accounts if no other Validation Module is set during deployment. Streamlining user operations and ownership management.
+The ECDSA Validation Module serves as the **default module** for Biconomy Modular Smart Accounts if no other Validation Module is set during deployment, streamlining user operations and ownership management.
 :::
 
 ### Key Functions 🔐
 
-**Single Signer Simplicity**: Offers one-to-one, single-signature control, ideal for both Web2 users and MetaMask enthusiasts.
+**Single Signer Simplicity**: Offers 1/1, single-signature control, ideal for both Web2 users and MetaMask enthusiasts.  
 **ECDSA Signature Scheme**: Utilizes the ECDSA secp256r1 curve for secure signing.
 **Flexible Owner Authentication**: Supports various signer solutions like Privy, Fireblocks, Arcana Auth, Web3Auth, or Particle.
 **EIP-1271 Compliance**: Allowing Smart Accounts to sign Ethereum messages for logging into dApps.
 
 :::info
-One of the most popular module, it bridges the ease of traditional web logins with the security of blockchain technology.
+One of the most popular modules, it bridges the ease of traditional web logins with the security of blockchain technology.  
 :::
 
 ## Use Cases 🌟
 
 1. **Secure Transaction Signing**: EOAs can securely authorize transactions for Smart Accounts.
-2. **dApp Interaction**: Simplifies the process of logging into dApps using Ethereum messages.
+2. **dApp Interaction**: Simplifies the process of logging into dApps using Ethereum messages thanks to EIP-1271 support.  
 3. **Ownership Management**: Mirrors traditional ownership systems, providing a familiar framework within a more advanced blockchain context.
 
 For in-depth insights on the ECDSA Module's smart contract mechanics, refer to our comprehensive [Smart Contract Deep Dive](/Modules/ecdsa/ecdsasmartcontracts) and for guidance on SDK integration, check out our detailed [SDK Tutorial](/Modules/ecdsa/ecdsasdk).
