--- a/docs/Modules/multichain.mdx
+++ b/docs/Modules/multichain.mdx
@@ -52,9 +52,9 @@ const multiChainModule = await MultiChainValidationModule.create({
 As per the code, 
 - First we import the module and its associated address.
 - Utilize the create method to initialize the module. This method requires a signer, and the module address as required arguments.
-Biconomy supports various [third party signer](/Account/signers/description) integrations so you can use any signer of your choice like viem, privy etc.
+Biconomy supports various [third party signer](/Account/signers/description) integrations so you can use any signer of your choice like viem, privy, etc.
 - Once initialized it can be passed to the smart account [create method](/Account/methods/create) to create a smart account. 
-This module can be used both as default and active validation module.
+This module can be used both as a default and active validation module.
 
 Here is how you can set up Smart Account instances accross multiple chains: 
 
