--- a/docs/Modules/multichain.mdx
+++ b/docs/Modules/multichain.mdx
@@ -39,7 +39,7 @@ pnpm add @biconomy/modules
 </Tabs>
 
 ## Integration 
-In this, we describe the flow for integrating Multichain validation module. Let's start by looking at the code:
+In this, we describe the flow for integrating the Multichain validation module. Let's start by looking at the code:
 
 ```typescript
 import { MultiChainValidationModule, DEFAULT_MULTICHAIN_MODULE } from "@biconomy/modules";
