--- a/docs/Modules/ecdsa.mdx
+++ b/docs/Modules/ecdsa.mdx
@@ -8,7 +8,7 @@ The ECDSA Validation Module is a key component in the Biconomy Modular Smart Acc
 
 ## Methods
 - [validateUserOp](https://github.com/bcnmy/scw-contracts/blob/b5be5399ef0e411b62b4342e12a15e34c35bb83c/contracts/smart-account/modules/EcdsaOwnershipRegistryModule.sol#L90C14-L90C28): This method is essential to validate the user operation. This method requires userOp object and the user Op Hash to be passed as required arguments. It gets called by the smart account to validate the userOp.
-- [transferOwnership](https://github.com/bcnmy/scw-contracts/blob/b5be5399ef0e411b62b4342e12a15e34c35bb83c/contracts/smart-account/modules/EcdsaOwnershipRegistryModule.sol#L142C14-L142C14): This method is used to transfer ownership of the smart account to a new EOA address. An event is emitted every time this method is executed. This method requires smart account address and the new owner address as the required parameters.
+- [transferOwnership](https://github.com/bcnmy/scw-contracts/blob/b5be5399ef0e411b62b4342e12a15e34c35bb83c/contracts/smart-account/modules/EcdsaOwnershipRegistryModule.sol#L142C14-L142C14): This method is used to transfer ownership of the smart account to a new EOA address. An event is emitted every time this method is executed. This method requires a smart account address and the new owner address as the required parameters.
 ## Installation
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
