--- a/docs/Modules/multichain.mdx
+++ b/docs/Modules/multichain.mdx
@@ -3,7 +3,7 @@ sidebar_position: 3
 ---
 # Multichain Validation Module
 
-This module serves as an extention of the [ECDSA Module](/Modules/ecdsa), allowing users to dispatch multiple userOps on different chains using a single signature.
+This module serves as an extension of the [ECDSA Module](/Modules/ecdsa), allowing users to dispatch multiple userOps on different chains using a single signature.
 [MultiChainValidationModule](https://github.com/bcnmy/scw-contracts/blob/main/contracts/smart-account/modules/MultichainECDSAValidator.sol) abstracts away the details of the chain with which the user is interacting.
 For more information on how this module works and its contributions to improving dApp user experience, please refer to [this link](https://www.biconomy.io/post/multchain-validation-smart-account-module)
 
