--- a/docs/Modules/ecdsa/ecdsavalidationmodule.mdx
+++ b/docs/Modules/ecdsa/ecdsavalidationmodule.mdx
@@ -4,6 +4,8 @@ sidebar_position: 1
 description: "Overview of ECDSA Validation Module's role in Smart Accounts"
 ---
 
+# ECDSA Ownership Module
+
 ## Introduction 📄
 
 The **ECDSA Validation Module** or **ECDSA Module** is integral to **Biconomy's Modular Smart Account**, enhancing transaction security and user authentication. This document outlines its functionality, benefits, and use cases.
