✏️ fix link + remove module mention

--- a/docs/Modules/BatchedSession.mdx
+++ b/docs/Modules/BatchedSession.mdx
@@ -2,7 +2,7 @@
 sidebar_position: 5
 ---
 
-# Batched Session Validation Module
+# Batched Session Validation
 
 This module works hand in hand with the Session Key Manager Module. It allows for multiple session validation modules to be activated for a user.
 
