--- a/docs/Modules/ecdsa.mdx
+++ b/docs/Modules/ecdsa.mdx
@@ -7,7 +7,7 @@ description: "Overview of ECDSA Validation Module's role in Smart Accounts"
 import Tabs from "@theme/Tabs";
 import TabItem from "@theme/TabItem";
 
-# ECDSA Ownership Module
+# ECDSA Ownership
 
 ## Introduction 📄
 
@@ -44,13 +44,11 @@ One of the most popular modules, it bridges the ease of traditional web logins w
 2. **dApp Interaction**: Simplifies the process of logging into dApps using Ethereum messages thanks to EIP-1271 support.
 3. **Ownership Management**: Mirrors traditional ownership systems, providing a familiar framework within a more advanced blockchain context.
 
-For in-depth insights on the ECDSA Module's smart contract mechanics, refer to our comprehensive [Smart Contract Deep Dive](/Modules/ecdsa/ecdsasmartcontracts) and for guidance on SDK integration, check out our detailed [SDK Tutorial](/Modules/ecdsa/ecdsasdk).
-
 # 📜 Smart Contract Deep Dive 🛠️
 
 ## Introduction
 
-This document delves into the `EcdsaOwnershipRegistryModule` for Biconomy Smart Accounts, focusing on key functionalities and security aspects.
+This section delves into the `EcdsaOwnershipRegistryModule` for Biconomy Smart Accounts, focusing on key functionalities and security aspects.
 
 ## Core Functionalities
 
@@ -142,7 +140,7 @@ The `EcdsaOwnershipRegistryModule` interacts with Smart Accounts primarily throu
 Understanding this interaction is key for developers working with Smart Accounts and the ECDSA module, as it forms the basis of secure and controlled operations within the Biconomy ecosystem.
 :::
 
-# ECDSA Ownership Module Integration Guide
+# ECDSA Ownership Module SDK Guide
 
 ## Introduction 📘
 
