--- a/docs/Modules/sessionvalidationmodule.mdx
+++ b/docs/Modules/sessionvalidationmodule.mdx
@@ -2,7 +2,7 @@
 sidebar_position: 4
 ---
 
-# Session Key Manager Module
+# Session Key Manager
 
 This module enables the use of sessions with session validation modules. The session validation modules can be deployed at different addresses. The validation modules themselves do not get implemented as modules themselves as they will all be managed by Session Key Manager.
 
