--- a/docs/Modules/ecdsa.mdx
+++ b/docs/Modules/ecdsa.mdx
@@ -1,15 +1,17 @@
 ---
-sidebar_label: "ECDSA Validation Module's role in Smart Accounts"
+sidebar_label: "ECDSA Ownership"
 sidebar_position: 2
-description: "Overview of ECDSA Validation Module's role in Smart Accounts"
+description: "Overview of ECDSA Ownership Validation Module's role in Smart Accounts"
 ---
 
 import Tabs from "@theme/Tabs";
 import TabItem from "@theme/TabItem";
 
-# ECDSA Ownership
+# ECDSA Ownership Module
 
-## Introduction 📄
+## What is it?
+
+### Introduction 📄
 
 The **ECDSA Validation Module** or **ECDSA Module** is integral to **Biconomy's Modular Smart Account**, enhancing transaction security and user authentication. This document outlines its functionality, benefits, and use cases.
 
@@ -17,9 +19,9 @@ The **ECDSA Validation Module** or **ECDSA Module** is integral to **Biconomy's 
 Understanding the ECDSA Validation Module is crucial for developers working with Ethereum-based Smart Accounts.
 :::
 
-## ECDSA Validation Module: Functionality and Role 🔑
+### ECDSA Validation Module: Functionality and Role 🔑
 
-### What is the ECDSA Validation Module? 🤔
+#### What is the ECDSA Validation Module? 🤔
 
 This module allows **Externally Owned Accounts (EOAs)** to authorize and sign user operations (UserOps) for Biconomy Smart Accounts. It operates similarly to non-modular Smart Account ownership but is reconstructed as a **Validation Module** within the **Account Abstraction + Modular Smart Accounts** ecosystem.
 
@@ -27,7 +29,7 @@ This module allows **Externally Owned Accounts (EOAs)** to authorize and sign us
 The ECDSA Validation Module serves as the **default module** for Biconomy Modular Smart Accounts if no other Validation Module is set during deployment, streamlining user operations and ownership management.
 :::
 
-### Key Functions 🔐
+#### Key Functions 🔐
 
 **Single Signer Simplicity**: Offers 1/1, single-signature control, ideal for both Web2 users and MetaMask enthusiasts.  
 **ECDSA Signature Scheme**: Utilizes the ECDSA secp256r1 curve for secure signing.
@@ -38,21 +40,21 @@ The ECDSA Validation Module serves as the **default module** for Biconomy Modula
 One of the most popular modules, it bridges the ease of traditional web logins with the security of blockchain technology.  
 :::
 
-## Use Cases 🌟
+### Use Cases 🌟
 
 1. **Secure Transaction Signing**: EOAs can securely authorize transactions for Smart Accounts.
 2. **dApp Interaction**: Simplifies the process of logging into dApps using Ethereum messages thanks to EIP-1271 support.
 3. **Ownership Management**: Mirrors traditional ownership systems, providing a familiar framework within a more advanced blockchain context.
 
-# 📜 Smart Contract Deep Dive 🛠️
+## 📜 Smart Contract Deep Dive 🛠️
 
 ## Introduction
 
 This section delves into the `EcdsaOwnershipRegistryModule` for Biconomy Smart Accounts, focusing on key functionalities and security aspects.
 
-## Core Functionalities
+### Core Functionalities
 
-### User Operation Validation (`validateUserOp`) 🛡️
+#### User Operation Validation (`validateUserOp`) 🛡️
 
 ```solidity
 // Validates user operations signed by an EOA
@@ -79,7 +81,7 @@ Objective: The function safeguards the authenticity of user operations on Smart 
 Method: It specifically decodes and verifies a segment of the userOp.signature. This segmentation is crucial because userOp.signature typically contains both the signature and the validation module's address. By extracting only the signature part, the function accurately validates the operation against the intended owner's signature, ensuring that the operation is legitimately authorized.
 :::
 
-### Signature Verification (`_verifySignature`) 🔐
+#### Signature Verification (`_verifySignature`) 🔐
 
 ```solidity
 // Internal function to verify the signature of a smart account
@@ -119,7 +121,7 @@ function isValidSignature(
 Proper handling and verification of signatures are crucial for maintaining the integrity of the Smart Account. The `isValidSignature` function is essential for EIP-1271 support, validating that the signature matches the expected signer as per the EIP-1271 standard.
 :::
 
-## Security Considerations
+### Security Considerations
 
 - **Strict Ownership Rules**: Only Externally Owned Accounts (EOAs) can authorize transactions, ensuring secure control over Smart Account operations.
 - **Signature Verification**: Implements robust methods for signature validation, crucial for preventing unauthorized access.
@@ -128,7 +130,7 @@ Proper handling and verification of signatures are crucial for maintaining the i
 The `initForSmartAccount` method doesn't include `isSmartContract` checks due to operational constraints. However, this doesn't compromise security as operations require valid EOA signatures. This ensures Smart Accounts remain secure within their operational framework.
 :::
 
-## Interaction with Smart Accounts 🤝
+### Interaction with Smart Accounts 🤝
 
 The `EcdsaOwnershipRegistryModule` interacts with Smart Accounts primarily through its core functionalities:
 
@@ -140,13 +142,13 @@ The `EcdsaOwnershipRegistryModule` interacts with Smart Accounts primarily throu
 Understanding this interaction is key for developers working with Smart Accounts and the ECDSA module, as it forms the basis of secure and controlled operations within the Biconomy ecosystem.
 :::
 
-# ECDSA Ownership Module SDK Guide
+## ECDSA Ownership Module SDK Guide
 
-## Introduction 📘
+### Introduction 📘
 
 Integrate the ECDSA Validation Module into Biconomy Smart Accounts using the SDK.
 
-## Setup and Installation 🛠️
+### Setup and Installation 🛠️
 
 <Tabs>
 <TabItem value="js" label="npm">
@@ -178,7 +180,7 @@ pnpm add @biconomy/modules ethers
 </TabItem>
 </Tabs>
 
-## Creating a Signer 🗝️
+### Creating a Signer 🗝️
 
 ```javascript
 import { ethers } from "ethers";
@@ -187,7 +189,7 @@ const provider = new ethers.providers.JsonRpcProvider("[RPC_Endpoint]");
 const signer = new ethers.Wallet("[Private_Key]", provider);
 ```
 
-## Importing and Initializing ECDSA Module 🌟
+### Importing and Initializing ECDSA Module 🌟
 
 ```javascript
 import {
@@ -201,7 +203,7 @@ const ecdsaModule = await ECDSAOwnershipValidationModule.create({
 });
 ```
 
-## Creating a Smart Account 🚀
+### Creating a Smart Account 🚀
 
 ```javascript
 import { BiconomySmartAccountV2 } from "@biconomy/account";
