--- a/docs/Modules/ecdsa.mdx
+++ b/docs/Modules/ecdsa.mdx
@@ -9,9 +9,7 @@ import TabItem from "@theme/TabItem";
 
 # ECDSA Ownership Module
 
-## What is it?
-
-### Introduction 📄
+## What is it? 🤔
 
 The **ECDSA Validation Module** or **ECDSA Module** is integral to **Biconomy's Modular Smart Account**, enhancing transaction security and user authentication. This document outlines its functionality, benefits, and use cases.
 
@@ -19,9 +17,7 @@ The **ECDSA Validation Module** or **ECDSA Module** is integral to **Biconomy's 
 Understanding the ECDSA Validation Module is crucial for developers working with Ethereum-based Smart Accounts.
 :::
 
-### ECDSA Validation Module: Functionality and Role 🔑
-
-#### What is the ECDSA Validation Module? 🤔
+### What is the ECDSA Ownership Module? 🤔
 
 This module allows **Externally Owned Accounts (EOAs)** to authorize and sign user operations (UserOps) for Biconomy Smart Accounts. It operates similarly to non-modular Smart Account ownership but is reconstructed as a **Validation Module** within the **Account Abstraction + Modular Smart Accounts** ecosystem.
 
@@ -40,15 +36,13 @@ The ECDSA Validation Module serves as the **default module** for Biconomy Modula
 One of the most popular modules, it bridges the ease of traditional web logins with the security of blockchain technology.  
 :::
 
-### Use Cases 🌟
+#### Use Cases 🌟
 
 1. **Secure Transaction Signing**: EOAs can securely authorize transactions for Smart Accounts.
 2. **dApp Interaction**: Simplifies the process of logging into dApps using Ethereum messages thanks to EIP-1271 support.
 3. **Ownership Management**: Mirrors traditional ownership systems, providing a familiar framework within a more advanced blockchain context.
 
 ## 📜 Smart Contract Deep Dive 🛠️
-
-## Introduction
 
 This section delves into the `EcdsaOwnershipRegistryModule` for Biconomy Smart Accounts, focusing on key functionalities and security aspects.
 
@@ -142,9 +136,7 @@ The `EcdsaOwnershipRegistryModule` interacts with Smart Accounts primarily throu
 Understanding this interaction is key for developers working with Smart Accounts and the ECDSA module, as it forms the basis of secure and controlled operations within the Biconomy ecosystem.
 :::
 
-## ECDSA Ownership Module SDK Guide
-
-### Introduction 📘
+## SDK Guide 📘 
 
 Integrate the ECDSA Validation Module into Biconomy Smart Accounts using the SDK.
 
