Make overview as the default page

--- a/docs/Modules/index.mdx
+++ b/docs/Modules/index.mdx
@@ -1,8 +1,9 @@
 ---
-sidebar_position: 1
-custom_edit_url: https://github.com/bcnmy/docs/blob/master/docs/Modules/overview.md
+slug: /modules
+sidebar_position: 6
+
 ---
-# Overview
+# Modules
 
 Modular smart accounts (MSA) offer more flexibility than 'static' accounts. Static accounts often need a developer for changes and involve complex proxy upgrades. In contrast, with MSA the functionalities are moved to external contracts called `modules` to increase the speed of feature development. MSA lets users install or uninstall these modules, avoiding the need for entire account redeployment.
 
