--- a/docs/Modules/multichain.mdx
+++ b/docs/Modules/multichain.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar_label: "Multichain Validation Module"
+sidebar_label: "Multichain Validation"
 sidebar_position: 3
 description: "Overview of Multichain Validation Module with ECDSA Ownership"
 ---
