--- a/docs/Modules/multichain.mdx
+++ b/docs/Modules/multichain.mdx
@@ -9,7 +9,7 @@ import TabItem from "@theme/TabItem";
 
 # Multichain Validation Module
 
-This module acts as an extention of the [ECDSA Module](/Modules/ecdsa). The added benefit of this module is you now have the ability to sign once and authorize any amount of userOps accross multiple blockchain networks.
+This module acts as an extention of the [ECDSA Module](/Modules/ecdsa). The added benefit of this module is you now have the ability to sign once and authorize any number of userOps across multiple blockchain networks.
 
 ### What is the Multichain Validation Module? 🤔
 
