--- a/docs/Modules/multichain.mdx
+++ b/docs/Modules/multichain.mdx
@@ -15,7 +15,7 @@ This module acts as an extention of the [ECDSA Module](/Modules/ecdsa). The adde
 
 This module allows **Externally Owned Accounts (EOAs)** to authorize and sign user operations (UserOps) for Biconomy Smart Accounts on Multiple chains with single ECDSA signature. 
 
-`Benefits`
+**Benefits**
 - significantly improves UX for deploying and setting up Smart Accounts on several chains 
 - significantly reduces user friction for multichain operations.
 
