--- a/docs/Modules/multichain.mdx
+++ b/docs/Modules/multichain.mdx
@@ -26,7 +26,7 @@ You can also use this module as the **default module** just like the ECDSA Valid
 #### Key Functions 🔐
 
 - **ECDSA Signature Scheme**: Utilizes the ECDSA secp256r1 curve for secure signing.
-- **Flexible Signer Authentication**: Supports various signer solutions like Privy, Fireblocks, Arcana Auth, Capsule, Lit protocol, Turnkey, Web3Auth, Particle, Magic, Portal etc
+- **Flexible Signer Authentication**: Supports various signer solutions like Privy, Fireblocks, Arcana Auth, Capsule, Lit protocol, Turnkey, Web3Auth, Particle, Magic, Portal, etc.
 - **EIP-1271 Compliance**: Allowing Smart Accounts to sign Ethereum messages for logging into dApps.
 - **Sign once, Execute on multiple chains**
 
