--- a/docs/Modules/multichain.mdx
+++ b/docs/Modules/multichain.mdx
@@ -34,7 +34,7 @@ You can also use this module as the **default module** just like the ECDSA Valid
 
 Enables use cases which require several actions to be authorized for several chains with just one signature required from user.
 
-1. **Multichain intent for example exit all my native tokens for usdc
+1. **Multichain intent for example exit all my native tokens for USDC
 2. **Allows a dApp to require just one signature from their user to configure & deploy smart accounts on multiple chains and delegate certain actions with permission via session keys on all those chains
 3. **Cross chain state sync actions e.g transfer ownership of SA, change ens, similar actions on protocol that is deployed on multiple chains
 4. **Onboard user on x chains by deploying their smart account + some action like register in raffle 
